<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ListPreference
        android:defaultValue="@string/pref_event_jazz"
        android:entries="@array/pref_event_options"
        android:entryValues="@array/pref_event_values"
        android:key="@string/pref_event_key"
        android:title="@string/pref_event_label" />

    <ListPreference
        android:defaultValue="@string/pref_borough_manhattan"
        android:entries="@array/pref_borough_options"
        android:entryValues="@array/pref_borough_values"
        android:key="@string/pref_borough_key"
        android:title="@string/pref_borough_label"
        />
</PreferenceScreen>